Update env variables and added Error handling

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 APP_NAME=ShrinkIt
-DB_CONNECTION=mongodb://localhost/urlShortner
-PORT=5000
+
+# MongoDB
+DB_CONNECTION=mongodb
+DB_HOST=localhost
+DB_PORT=27017
+DB_DATABASE=shrinkIt
+DB_USERNAME=
+DB_PASSWORD=
+
+# Express
+EX_PORT=5000
