--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-api-shrink-it",
   "version": "1.0.0",
-  "description": "",
+  "description": "Shrink It API",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
