--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_NAME=ShrinkIt
 DB_CONNECTION=mongodb
 DB_HOST=localhost
 DB_PORT=27017
-DB_DATABASE=shrinkIt
+DB_NAME=shrinkIt
 DB_USERNAME=
 DB_PASSWORD=
 
