SI-14 Added the ability to create short url's with custom domain name

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME=ShrinkIt
 APP_ENV=development
 APP_TIME_ZONE=America/Toronto
+APP_SHORT_URL_PREFIX=shrinkit.com/
 
 # MongoDB
 DB_CONNECTION=mongodb
