SI-20 Added the functionality to verify the URL before creating the short URL

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "url-exist": "^2.0.1"
   }
 }
