--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
