--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
     "shortid": "^2.2.15",
     "url-exist": "^2.0.1"
   }
