Added functionality to save logs

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 APP_NAME=ShrinkIt
-APP_ENV=development
-APP_TIME_ZONE=America/Toronto
-APP_SHORT_URL_PREFIX=example.com/
+APP_SHORT_URL_PREFIX=shri.nk/
+
+# Express
+APP_ENV=NODE_ENV=development
+APP_TIMEZONE=TZ=America/Toronto
+APP_PORT=5000
 
 # MongoDB
 DB_CONNECTION=mongodb
@@ -10,6 +13,3 @@ DB_PORT=27017
 DB_NAME=shrinkIt
 DB_USERNAME=
 DB_PASSWORD=
-
-# Express
-EX_PORT=5000
