--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
+    "rotating-file-stream": "^2.0.2",
     "serve-favicon": "^2.5.0",
     "shortid": "^2.2.15",
     "url-exist": "^2.0.1"
