--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Shrink It API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "devStart" : "nodemon clusters.js",
+    "test" : "mocha"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +28,9 @@
     "serve-favicon": "^2.5.0",
     "shortid": "^2.2.15",
     "url-exist": "^2.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1"
   }
 }
