--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME=ShrinkIt
 APP_SHORT_URL_PREFIX=shrink.it
 
 # Express
-APP_ENV=NODE_ENV=development
-APP_TIMEZONE=TZ=America/Toronto
+NODE_ENV=development
+TZ=America/Toronto
 APP_PORT=5000
 
 # MongoDB
