--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "devStart" : "nodemon clusters.js",
-    "test" : "mocha"
+    "startClusters": "nodemon clusters.js",
+    "test": "mocha --recursive"
   },
   "keywords": [],
   "author": "",
